--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,8 @@ header img {
 }
 
 footer {
-    height: 50px;
+    min-height: 50px;
+
 }
 
 /* DETALLES */
@@ -97,7 +98,6 @@ footer {
 }
 
 .card-detail img {
-    background-size: contain;
     width: 100%;
     height: auto;
     object-fit: contain;
